--- a/assignments/4/CNN.ipynb
+++ b/assignments/4/CNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,13 @@
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "from PIL import Image\n",
-    "from torch.utils.data import Dataset, DataLoader"
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "from tqdm import tqdm\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,16 +85,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "class MultiMNISTDataset(Dataset):\n",
-    "    def __init__(self, images, labels, transform=None):\n",
+    "    def __init__(self, images, labels, task = 'classification', transform=None):\n",
     "        self.images = images\n",
     "        self.labels = labels\n",
+    "        self.task = task\n",
     "        self.transform = transform\n",
-    "\n",
     "    def __len__(self):\n",
     "        return len(self.images)\n",
     "\n",
@@ -107,23 +108,11 @@
     "        if self.transform:\n",
     "            image = self.transform(image)\n",
     "\n",
-    "        label = torch.tensor(label, dtype=torch.long).to(device)\n",
+    "        if (self.task == 'classification'):\n",
+    "            label = torch.tensor(label, dtype=torch.long).to(device)\n",
+    "        else:\n",
+    "            label = torch.tensor(label, dtype=torch.float32).to(device).unsqueeze(0)\n",
     "        return image, label\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_data = MultiMNISTDataset(train_data, train_labels)\n",
-    "val_data = MultiMNISTDataset(val_data, val_labels)\n",
-    "test_data = MultiMNISTDataset(test_data, test_labels)\n",
-    "\n",
-    "train_loader = DataLoader(train_data, batch_size=32, shuffle=True)\n",
-    "val_loader = DataLoader(val_data, batch_size=32, shuffle=False)\n",
-    "test_loader = DataLoader(test_data, batch_size=32, shuffle=False)"
    ]
   },
   {
@@ -135,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,12 +198,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tqdm import tqdm\n",
-    "\n",
     "def train(model, optimizer, train_loader, val_loader, num_epochs=10):\n",
     "    for epoch in range(num_epochs):\n",
     "        model.train()\n",
@@ -246,154 +233,336 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data_classification = MultiMNISTDataset(train_data, train_labels)\n",
+    "val_data_classification = MultiMNISTDataset(val_data, val_labels)\n",
+    "test_data_classification = MultiMNISTDataset(test_data, test_labels)\n",
+    "\n",
+    "train_loader_classification = DataLoader(train_data_classification, batch_size=32, shuffle=True)\n",
+    "val_loader_classification = DataLoader(val_data_classification, batch_size=32, shuffle=False)\n",
+    "test_loader_classification = DataLoader(test_data_classification, batch_size=32, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10: 100%|██████████| 394/394 [00:06<00:00, 60.74it/s, Loss=0.0490]\n"
+      "Epoch 1/10: 100%|██████████| 394/394 [00:06<00:00, 56.56it/s, Loss=0.0461]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Validation Accuracy: 99.10%, Validation Loss: 0.059389\n"
+      "Epoch 1, Validation Accuracy: 97.98%, Validation Loss: 0.093532\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 2/10: 100%|██████████| 394/394 [00:06<00:00, 60.39it/s, Loss=0.0190]\n"
+      "Epoch 2/10: 100%|██████████| 394/394 [00:05<00:00, 77.75it/s, Loss=0.0415]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 2, Validation Accuracy: 99.34%, Validation Loss: 0.037673\n"
+      "Epoch 2, Validation Accuracy: 99.53%, Validation Loss: 0.033938\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 3/10: 100%|██████████| 394/394 [00:05<00:00, 65.72it/s, Loss=0.1635]\n"
+      "Epoch 3/10: 100%|██████████| 394/394 [00:05<00:00, 77.66it/s, Loss=0.1484]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 3, Validation Accuracy: 99.63%, Validation Loss: 0.040604\n"
+      "Epoch 3, Validation Accuracy: 99.60%, Validation Loss: 0.036460\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 4/10: 100%|██████████| 394/394 [00:05<00:00, 68.60it/s, Loss=0.0057]\n"
+      "Epoch 4/10: 100%|██████████| 394/394 [00:05<00:00, 76.42it/s, Loss=0.0040]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 4, Validation Accuracy: 99.50%, Validation Loss: 0.020367\n"
+      "Epoch 4, Validation Accuracy: 99.31%, Validation Loss: 0.019641\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 5/10: 100%|██████████| 394/394 [00:05<00:00, 69.68it/s, Loss=0.0043]\n"
+      "Epoch 5/10: 100%|██████████| 394/394 [00:05<00:00, 75.32it/s, Loss=0.0229]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 5, Validation Accuracy: 99.63%, Validation Loss: 0.016056\n"
+      "Epoch 5, Validation Accuracy: 99.83%, Validation Loss: 0.036251\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 6/10: 100%|██████████| 394/394 [00:05<00:00, 70.36it/s, Loss=0.0398]\n"
+      "Epoch 6/10: 100%|██████████| 394/394 [00:05<00:00, 76.02it/s, Loss=0.0070]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 6, Validation Accuracy: 99.77%, Validation Loss: 0.011964\n"
+      "Epoch 6, Validation Accuracy: 99.59%, Validation Loss: 0.025552\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 7/10: 100%|██████████| 394/394 [00:06<00:00, 64.82it/s, Loss=0.0131]\n"
+      "Epoch 7/10: 100%|██████████| 394/394 [00:05<00:00, 75.08it/s, Loss=0.0128]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 7, Validation Accuracy: 99.73%, Validation Loss: 0.032205\n"
+      "Epoch 7, Validation Accuracy: 99.87%, Validation Loss: 0.015624\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 8/10: 100%|██████████| 394/394 [00:05<00:00, 70.79it/s, Loss=0.0074]\n"
+      "Epoch 8/10: 100%|██████████| 394/394 [00:05<00:00, 74.82it/s, Loss=0.0235]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 8, Validation Accuracy: 99.77%, Validation Loss: 0.015004\n"
+      "Epoch 8, Validation Accuracy: 99.73%, Validation Loss: 0.020732\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 9/10: 100%|██████████| 394/394 [00:05<00:00, 70.70it/s, Loss=0.0100]\n"
+      "Epoch 9/10: 100%|██████████| 394/394 [00:05<00:00, 70.95it/s, Loss=0.2366]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 9, Validation Accuracy: 99.53%, Validation Loss: 0.020547\n"
+      "Epoch 9, Validation Accuracy: 99.90%, Validation Loss: 0.011307\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 10/10: 100%|██████████| 394/394 [00:07<00:00, 51.32it/s, Loss=0.0177]\n"
+      "Epoch 10/10: 100%|██████████| 394/394 [00:05<00:00, 74.58it/s, Loss=0.0429]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 10, Validation Accuracy: 99.57%, Validation Loss: 0.029821\n"
+      "Epoch 10, Validation Accuracy: 99.27%, Validation Loss: 0.024547\n"
      ]
     }
    ],
    "source": [
     "model = CNN(task='classification', num_classes=4).to(device)\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
-    "train(model, optimizer, train_loader, val_loader, num_epochs=10)"
+    "train(model, optimizer, train_loader_classification, val_loader_classification, num_epochs=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data_regression = MultiMNISTDataset(train_data, train_labels, task='regression')\n",
+    "val_data_regression = MultiMNISTDataset(val_data, val_labels, task='regression')\n",
+    "test_data_regression = MultiMNISTDataset(test_data, test_labels, task='regression')\n",
+    "\n",
+    "train_loader_regression = DataLoader(train_data_regression, batch_size=32, shuffle=True)\n",
+    "val_loader_regression = DataLoader(val_data_regression, batch_size=32, shuffle=False)\n",
+    "test_loader_regression = DataLoader(test_data_regression, batch_size=32, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10: 100%|██████████| 394/394 [00:05<00:00, 76.70it/s, Loss=0.0865]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1, Validation Accuracy: 6.42%, Validation Loss: 0.064170\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2/10: 100%|██████████| 394/394 [00:05<00:00, 71.92it/s, Loss=0.1680]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2, Validation Accuracy: 4.17%, Validation Loss: 0.041748\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3/10: 100%|██████████| 394/394 [00:05<00:00, 71.77it/s, Loss=0.0286]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3, Validation Accuracy: 3.07%, Validation Loss: 0.030660\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4/10: 100%|██████████| 394/394 [00:05<00:00, 72.52it/s, Loss=0.0269]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4, Validation Accuracy: 3.28%, Validation Loss: 0.032797\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5/10: 100%|██████████| 394/394 [00:05<00:00, 71.26it/s, Loss=0.0353]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5, Validation Accuracy: 2.97%, Validation Loss: 0.029664\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 6/10: 100%|██████████| 394/394 [00:05<00:00, 71.81it/s, Loss=0.1585]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 6, Validation Accuracy: 2.08%, Validation Loss: 0.020805\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 7/10: 100%|██████████| 394/394 [00:05<00:00, 70.92it/s, Loss=0.0217]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 7, Validation Accuracy: 2.04%, Validation Loss: 0.020432\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 8/10: 100%|██████████| 394/394 [00:05<00:00, 70.87it/s, Loss=0.0168]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 8, Validation Accuracy: 2.16%, Validation Loss: 0.021649\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 9/10: 100%|██████████| 394/394 [00:05<00:00, 66.65it/s, Loss=0.0188]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 9, Validation Accuracy: 2.49%, Validation Loss: 0.024943\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 10/10: 100%|██████████| 394/394 [00:05<00:00, 75.29it/s, Loss=0.0072]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 10, Validation Accuracy: 2.24%, Validation Loss: 0.022412\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = CNN(task='regression').to(device)\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
+    "train(model, optimizer, train_loader_regression, val_loader_regression, num_epochs=10)"
    ]
   }
  ],
